rust/cube/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__date_filters__after_or_on_date.snap
---
source: cubesqlplanner/src/tests/date_filters.rs
expression: result
---
visitors__created_at
--------------------
2017-01-07 00:00:00
