rust/cube/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__date_filters__before_or_on_date.snap
---
source: cubesqlplanner/src/tests/date_filters.rs
expression: result
---
visitors__created_at
--------------------
2016-09-07 00:00:00 
2017-01-03 00:00:00 
2017-01-05 00:00:00 
2017-01-06 00:00:00 
2017-01-07 00:00:00
