rust/cube/cubesqlplanner/cubesqlplanner/src/tests/snapshots/cubesqlplanner__tests__date_filters__in_date_range.snap
---
source: cubesqlplanner/src/tests/date_filters.rs
expression: result
---
visitors__created_at
--------------------
2017-01-03 00:00:00
